5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1752_1523.log
== TEST (2019-05-16 17:07:55) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1

while(x>=200):
	baloes = x + bc
	baloes = baloes - c
	semana = semana + 1
print(semana)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    baloes = baloes - c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:08:21) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1

while(x>=200):
	baloes = x + bc
	baloes = baloes - bd
	semana = semana + 1
print(semana)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    baloes = baloes - c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:08:37) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1

while(x>=200):
	baloes = x + bc
	baloes = baloes - bd
	semana = semana + 1
print(semana)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    baloes = baloes - c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:08:54) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1

while(x>=200):
	baloes = x + bc
	baloes = baloes - bd
	semana = semana + 1
print(semana)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    baloes = baloes - c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:10:02) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
baloes = x
while(x>=200):
	baloes = baloes + bc
	baloes = baloes - bd
	semana = semana + 1
print(semana)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    baloes = baloes - c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:10:22) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
baloes = x
while(x==200):
	baloes = baloes + bc
	baloes = baloes - bd
	semana = semana + 1
print(semana)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:10:45) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
baloes = x
while(baloes==200):
	baloes = baloes + bc
	baloes = baloes - bd
	semana = semana + 1
print(semana)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:27:52) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
balao = x
while(baloes==200):
	balao = balao + bc
	baloes = balao - bd
	semana = semana + 1
print(semana)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(baloes==200):
NameError: name 'baloes' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:28:23) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
balao = x
while(balao>=200):
	balao = balao + bc
	baloes = balao - bd
	semana = semana + 1
print(semana)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(baloes==200):
NameError: name 'baloes' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:32:16) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
balao = x
while(balao>=200):
	balao = balao + bc
	baloes = balao - bd
	semana = semana + 1
print(semana)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(baloes==200):
NameError: name 'baloes' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:32:43) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
balao = x
while(balao>=200):
	balao = balao + bc
	baloes = balao - bd
	semana = semana + 1
print(semana)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(baloes==200):
NameError: name 'baloes' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:33:07) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
balao = x
while(balao>=200):
	balao = balao + bc
	balao = balao - bd
	semana = semana + 1
print(semana)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(baloes==200):
NameError: name 'baloes' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:35:54) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1

while(balao>=200):
	balao = x + bc
	balao = balao - bd
	semana = semana + 1
print(semana)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(balao>=200):
NameError: name 'balao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:36:11) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1

while(x>=200):
	balao = x + bc
	balao = balao - bd
	semana = semana + 1
print(semana)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(balao>=200):
NameError: name 'balao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:37:03) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1

while(x>=200):
	balao = x + bc
	balao = balao - bd
	semana = semana + 1
print(semana)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(balao>=200):
NameError: name 'balao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:40:41) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1

while(x>=200):
	frota = x + bc
	frota = frota - bd
	semana = semana + 1
print(semana)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(balao>=200):
NameError: name 'balao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:40:55) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1

while(x>200):
	frota = x + bc
	frota = frota - bd
	semana = semana + 1
print(semana)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(balao>=200):
NameError: name 'balao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:41:54) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota>200):
	frota = frota + bc
	frota = frota - bd
	semana = semana + 1
print(semana)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(balao>=200):
NameError: name 'balao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:42:04) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota>200):
	frota = frota + bc
	frota = frota - bd
	semana = semana + 1
print(semana)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(balao>=200):
NameError: name 'balao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:42:36) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota>200):
	frota = frota + bc
	perda = frota - bd
	semana = semana + 1
print(semana)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(balao>=200):
NameError: name 'balao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:43:11) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota>200):
	frota = frota + bc
	perda = frota - bd
	semana = semana + 1
print(semana)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(balao>=200):
NameError: name 'balao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:44:04) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota>200):
	frota = frota + bc
	perda = frota - bd
	semana = semana + 1
print(semana)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(balao>=200):
NameError: name 'balao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:44:29) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota>200):
	frota = frota + bc
	perda = frota - bd
	semana = semana + 1
	print(semana)
-- OUTPUT:
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:45:42) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota>200):
	frota = frota + bc
	perda = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:46:03) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
balao = x
while(balao>=200):
	balao = balao + bc
	baloes = balao - bd
	semana = semana + 1
print(semana)
	
-- EXECUTION TIME:
1050.83
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:46:12) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota>200):
	frota = frota + bc
	perda = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:47:09) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota>200):
	perda = frota - bd
	frota = frota + bc - perda
	semana = semana + 1
print(semana)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:48:10) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota>200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:48:27) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota>200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:48:41) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota>200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:49:41) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota>0 and frota < 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:49:56) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota>0 and frota < 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- EXECUTION TIME:
1.06315
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
1
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
1
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:50:12) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota > 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:50:17) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota > 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:50:28) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota > 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- EXECUTION TIME:
1.45555
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
1
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
2
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:50:32) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota > 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:51:02) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:51:02) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
balao = x
while(balao>=200):
	balao = balao + bc
	baloes = balao - bd
	semana = semana + 1
print(semana)
-- EXECUTION TIME:
1288.15
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:51:13) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- EXECUTION TIME:
0.853795
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
1
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
2
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:51:16) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:51:30) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 0
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:51:42) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 0
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:51:51) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 0
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:52:00) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 0
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:52:43) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 0
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:52:56) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 0
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:53:20) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 0
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:53:51) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 0
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- EXECUTION TIME:
0.844727
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
1
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:54:25) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 0
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:54:36) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:54:48) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- EXECUTION TIME:
1.15433
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
1
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
2
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:54:48) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:55:31) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- EXECUTION TIME:
0.891582
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
1
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
2
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:55:36) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 0
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:56:02) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 0
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:56:19) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 0
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:56:33) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 0
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:57:51) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 0
frota = x
while(frota >= 0 and frota <= 200):
	frota = frota + bc
	total = frota - bd
	semana = semana + 1
print(semana)
-- EXECUTION TIME:
0.703178
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
1
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:56) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1

while(x>=200):
	balao = x + bc
	balao = balao - bd
	semana = semana + 1
print(semana)
-- EXECUTION TIME:
1335.89
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:

-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:56) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1

while(x>=200):
	balao = x + bc
	balao = balao - bd
	semana = semana + 1
print(semana)
-- EXECUTION TIME:
1301.4
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:

-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:56) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1

while(x>=200):
	balao = x + bc
	balao = balao - bd
	semana = semana + 1
print(semana)
-- EXECUTION TIME:
1309.92
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:

-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:56) 
-- CODE:
x = int(input("qtde inicial: "))
bc = int(input("baloes construidos: "))
bd = int(input("baloes destruidos: "))
semana = 1

while(x>=200):
	balao = x + bc
	balao = balao - bd
	semana = semana + 1
print(semana)
-- EXECUTION TIME:
1355.54
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:

-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
